[REFACTOR] Internal dispatching flow and reply API (#141)
* first pass on VirtualThread refactor

* refactor CommandDispatcher

* prepare Dispatchers for refactoring and reimplement AutoCompleteDispatcher

* Make Runtime closeable

* Add Event abstraction over jda and EventHandlers for command and autocomplete

* introduce new ExecutionContext and simplify CommandHandler

* Use new ExecutionContext in middleware and adapters, restructure EventHandler

* Delete JDa Event wrapper

* remove CommandExecutionContext.java and remove context from type adapting flow

* delete old files

* fix type errors

* move method invoke to definition classes

* Move classes out of refactor sub package

* Refactor ExecutionContext and stuff

* fix wrong middleware priority

* Add KeyValueStore and missing package-info.java files

* Add KeyValueStore and missing package-info.java files

* Fix double method arguments

* Reduce generics complexity

* Refactor MiddlewareRegistry

* Split ExecutionContext.java

* refactor event classes and reply logic

* fix middleware order bug

* make components attachable again

* reimplement replyModal

* first pass on ButtonHandler

* seal EventHandler

* seal EventHandler

* Merge InvocationContext and Invocation

* refactor reply api

* Add getter for JDA Events in Event

* make "No interaction found" error message less ambiguous

* Refactor reply system (#142)

* make reply methods return Message object and reimplement keep components

* remove latest reply from runtime

* replace ephemeral boolean flag with ReplyConfig and introduce GlobalReplyConfig

* write unit tests for new ReplyConfig helper method and fix old unit tests

* simplify switch

* Hopefully fix middleware priorities

* Move HandlerContext out of InvocationContext

* Move InstanceSupplier out of InvocationContext

* bump code

* Explicitly state dispatching user api

* Yes..

* fully implement mo